[tool.poetry]
name = "comfyui-pyenv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.7.0"
transformers = "^4.36.2"
safetensors = "^0.4.1"
aiohttp = "^3.9.1"
pyyaml = "^6.0.1"
pillow = "^10.2.0"
scipy = "^1.11.4"
tqdm = "^4.66.1"
psutil = "^5.9.7"
torchsde = "^0.2.6"
opencv-python = "^4.9.0.80"
mttkinter = "^0.6.1"
mss = "^9.0.1"
pysimplegui = "^4.60.5"
keyboard = "^0.13.5"
pygrabber = "^0.2"
pygetwindow = "^0.0.9"
websocket-client = "^1.7.0"
natsort = "^8.4.0"
pynput = "^1.7.6"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
